packages/front-end/styles/global.scss
/* ... */
body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
  -webkit-font-smoothing: antialiased;
  background-color: $main-background;
  color: $main-black;
}

#block-menu-container {
  z-index: 990;
}

.main {
  padding-left: 240px;
  padding-top: 60px;
  //font-size: 14px;
  &.present {
    padding: 0;
  }
  & > .container-fluid,
  & > .pagecontents {
    padding: 15px;
  }
}
.contents {
  padding: 15px;
}
.pagecontents {
  max-width: 1340px; /* add otherwise things start to look odd when very wide */
}
pre {
  font-size: 100%;
}
.text-blue {
  color: $second-blue;
}
.text-purple {
  color: $highlight-purple;
}
.text-indigo {
  color: $indigo;
}

// default bootstrap overrides:

.btn-primary {
  @include button-variant(
    $highlight-purple,
    darken($highlight-purple, 7.5%),
    darken($highlight-purple, 10%),
    lighten($highlight-purple, 5%),
    lighten($highlight-purple, 10%),
    darken($highlight-purple, 30%)
  );
}

.btn-outline-primary {
  //button-outline-variant($color, $color-hover: color-yiq($color), $active-background: $color, $active-border: $color
  @include button-outline-variant(
    $highlight-purple,
    #fff,
    lighten($highlight-purple, 0%),
    $highlight-purple
  );
}
.badge {
  line-height: 1.2em;
  font-size: 85.72%; //12px
}
.badge-primary {
  @include badge-variant(#00ace5);
  border: 1px solid rgba(23, 18, 33, 0.1);
  font-weight: 700;
}

.hover-highlight {
  transition: all 0.3s cubic-bezier(0.685, 0.0473, 0.346, 1);
  &:hover {
    background-color: rgba(124, 69, 234, 0.06);
  }
}

.app-sidebar-header {
  .selected {
    background-color: $purple;
  }
  .divider {
    margin-top: 9px;
    border-top: 1px solid rgba(0, 0, 0, 0.5);
    a {
      border-top: 1px solid rgba(255, 255, 255, 0.1);
    }
  }
}
.appbox {
  background-color: #fff;
  border: 1px solid $app-border;
  margin-bottom: 1em;
  border-radius: 5px;

  td {
    vertical-align: middle;
  }

  &.tabbed {
    border-top: none;
    border-radius: 0 0 5px 5px;
  }

  .activesort {
    opacity: 1;
  }
  .inactivesort {
    opacity: 0.2;
    &:hover {
      opacity: 1;
    }
  }
}
.flex-1 {
  flex: 1;
}
.expandable-container {
  overflow: hidden;
  max-height: 120px;
  cursor: pointer;
  transition: max-height 0.3s;
  position: relative;

  .fader {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 15px 0 5px;
    text-align: center;
    cursor: pointer;
    color: rgba(0, 0, 0, 0);
  }

  pre {
    max-height: 590px;
    overflow: hidden !important;
  }

  &:hover .fader {
    color: inherit;
  }
  &.expanded {
    cursor: initial;
    max-height: 600px;
    .fader {
      display: none;
    }
    &:hover .fader {
      display: block;
    }

    pre {
      overflow-y: auto !important;
      overflow-x: auto !important;
    }
  }
}
.vertical-scroll {
  overflow-x: hidden;
  overflow-y: auto;
}
.badge-used {
  opacity: 0.5;
}
.tiptrigger {
  display: inline-block;
  position: relative;
  .tooltip {
    display: none;
    font-family: inherit;
    opacity: 0;

    &.bs-tooltip-bottom {
      top: 100%;
      left: 50%;
      transform: translate(-50%, 0);
    }
    .arrow {
      left: 50%;
      margin-left: -0.4rem;
    }
    .tooltip-inner {
      color: #fff;
      max-width: 400px;
      padding: 0.7em 1em;
      background-color: $blue;
      box-shadow: 1px 1px 4px rgb(0 0 0 / 40%);
    }
    .arrow::before {
      border-bottom-color: $blue;
    }
  }
  &:hover .tooltip {
    display: block;
    opacity: 1;
  }
}
.nav-link {
  padding: 0.3rem 0.8rem;
}
.nav-underlined .nav-link.active,
.nav-underlined .show > .nav-link {
  border-bottom: 2px solid #029dd1;
  font-weight: bold;
}
.welcome {
  z-index: 1000;
  position: relative;
  min-height: 100vh;
  font-family: Poppins, "Helvetica Neue", Arial, sans-serif;

  .intro-side {
    background-color: $purple;
    background: radial-gradient(
      at 50% 100%,
      rgba(109, 18, 228, 0.75),
      rgb(15, 1, 94)
    );
    color: #fff;
    padding-bottom: 30px;
    vertical-align: middle;
    min-height: 100%;
  }
  .ghosted-logo {
    background: transparent url("/logo/growth-book-logomark-ghosted.png") 50%
      50%;
    background-size: contain;
    background-repeat: no-repeat;
    min-height: 100%;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 10px;
    right: 10px;
    opacity: 0.5;
  }
  .logo {
    position: absolute;
    bottom: 10px;
    left: 0;
    right: 0;
    text-align: center;
  }
  .form-side {
    background-color: #fff;
    .formwrap {
      width: 100%;
      max-width: 500px;
    }
  }
  h1,
  h2,
  h3 {
    font-weight: 600;
  }
  .logout-link {
    position: absolute;
    top: 20px;
    right: 20px;
  }
  .tiptrigger {
    top: -1px;
  }
}
@media (min-width: 575px) {
  .welcome {
    .full-height {
      min-height: 100vh;
    }
    .intro-side {
      padding-bottom: 0;
    }
  }
}

.experiment-compact-holder {
  width: 100%;
  overflow-x: auto;
}

.experiment-tooltip {
  position: absolute;
  left: 50%;
  width: 300px;
  margin-left: -150px;
  text-align: center;
  bottom: 0;
  border-radius: 6px;
  font-size: 0.8em;
  background: rgba(255, 255, 255, 0.7);
  .tooltip-results {
    .ci-neg {
      color: $dark-red;
    }
    .ci-pos {
      color: $dark-green;
    }
    > div {
      padding: 0 8px;
    }
  }
  .tooltip-arrow {
    position: absolute;
    width: 16px;
    height: 16px;
    transform: rotate(45deg);
    right: -8px;
    top: 70%;
    background-color: #fff;
    box-shadow: rgba(6, 6, 6, 0.365) 0px 0px 1px;
    clip-path: polygon(0% 0%, 104% -4%, 100% 100%);
    border: 1px inset rgba(0, 0, 0, 0.1);
  }
}
/* ... */

